# axelF

./: .gitignore  AxelF_Synth_Spec.md  CMakeLists.txt  DESIGN_SESSION_SAVE_AND_ARRANGEMENT.md  JX3P_Topology.md  Jupiter8_Topology.md  Minimoog_Model_D_Spec.md  Moog15_Topology.md  PPG_Wave_Spec.md  PPG_Wave_Topology.md  ROADMAP_TO_10.md  TECHNICAL_REVIEW.md  UI_Mockups.html  _ppg_presets_block.txt  _ppg_presets_fixed.txt  axelF.code-workspace  build2.txt  build3.txt  build4.txt  dx7_new_presets.cpp  fix.py  fix2.js  fix3.py  fix_editors.js  fix_filesave.py  fix_serialization.py  fix_setsize.js  jx3pcheck.txt  jx3pfull.txt  moogfull.txt  out_mastermixer.txt  out_moog.txt  out_moog_utf8.txt  package-lock.json  rebuild_log.txt  rename_result.txt  test.cpp  wr3.txt  write_files.py  write_files2.py  (+3 more)
.github/skills/axelf-architecture/: SKILL.md
.github/skills/cmake/: SKILL.md
.github/skills/cpp-style/: SKILL.md
.github/skills/dsp-conventions/: SKILL.md
.github/skills/juce/: SKILL.md
.github/skills/synth-click-prevention/: SKILL.md
.github/skills/synth-high-quality/: SKILL.md
Resources/Presets/: README.md
Resources/Samples/: README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  simple_logger.h
Source/Common/: ArrangementCapture.h  ArrangementTimeline.h  EffectsParams.h  ExternalPluginSlot.cpp  ExternalPluginSlot.h  FactoryPresets.h  GlobalTransport.cpp  GlobalTransport.h  MasterMixer.cpp  MasterMixer.h  MetronomeClick.h  MidiLearn.h  MidiRouter.cpp  MidiRouter.h  ModulationMatrix.cpp  ModulationMatrix.h  ModuleProcessor.h  Pattern.cpp  Pattern.h  PatternEngine.cpp  PatternEngine.h  PatternUndoManager.h  PresetManager.cpp  PresetManager.h  SceneManager.cpp  SceneManager.h  SnapshotManager.cpp  SnapshotManager.h
Source/Common/DSP/: ADSREnvelope.cpp  ADSREnvelope.h  ChannelHPF.h  ChannelSaturation.h  ConsoleNoise.h  Crosstalk.h  DiffuseDelay.cpp  DiffuseDelay.h  Distortion.h  IR3109Filter.cpp  IR3109Filter.h  LFOGenerator.cpp  LFOGenerator.h  LadderFilter.cpp  LadderFilter.h  MasterBus.cpp  MasterBus.h  Oversampler.cpp  Oversampler.h  ParallelCrush.h  PlateReverb.cpp  PlateReverb.h  SendPreDelay.h  StereoChorus.h  StereoDelay.cpp  StereoDelay.h  StereoFlanger.h  SummingDrift.h  SummingSaturation.h
Source/Modules/DX7/: DX7Algorithm.cpp  DX7Algorithm.h  DX7Editor.cpp  DX7Editor.h  DX7Operator.cpp  DX7Operator.h  DX7Params.cpp  DX7Params.h  DX7Processor.cpp  DX7Processor.h  DX7Voice.cpp  DX7Voice.h
Source/Modules/JX3P/: JX3PChorus.cpp  JX3PChorus.h  JX3PDCO.cpp  JX3PDCO.h  JX3PEditor.cpp  JX3PEditor.h  JX3PParams.cpp  JX3PParams.h  JX3PProcessor.cpp  JX3PProcessor.h  JX3PVoice.cpp  JX3PVoice.h
Source/Modules/Jupiter8/: Jupiter8Arpeggiator.h  Jupiter8DCO.cpp  Jupiter8DCO.h  Jupiter8Editor.cpp  Jupiter8Editor.h  Jupiter8Params.cpp  Jupiter8Params.h  Jupiter8Processor.cpp  Jupiter8Processor.h  Jupiter8Voice.cpp  Jupiter8Voice.h
Source/Modules/LinnDrum/: LinnDrumEditor.cpp  LinnDrumEditor.h  LinnDrumParams.cpp  LinnDrumParams.h  LinnDrumProcessor.cpp  LinnDrumProcessor.h  LinnDrumSequencer.cpp  LinnDrumSequencer.h  LinnDrumVoice.cpp  LinnDrumVoice.h  axelF.code-workspace
Source/Modules/Moog15/: Moog15Editor.cpp  Moog15Editor.h  Moog15Params.cpp  Moog15Params.h  Moog15Processor.cpp  Moog15Processor.h  Moog15VCO.cpp  Moog15VCO.h  Moog15Voice.cpp  Moog15Voice.h  MoogContour.cpp  MoogContour.h  MoogLadder.cpp  MoogLadder.h
Source/Modules/PPGWave/: PPGWaveEditor.h  PPGWaveOsc.cpp  PPGWaveOsc.h  PPGWaveParams.cpp  PPGWaveParams.h  PPGWaveProcessor.cpp  PPGWaveProcessor.h  PPGWaveVoice.cpp  PPGWaveVoice.h  SSM2044Filter.cpp  SSM2044Filter.h  WavetableData.h
Source/UI/: ADSRDisplay.h  AboutOverlay.h  AlgorithmDisplay.h  ArrangementView.h  AxelFColours.h  AxelFLookAndFeel.cpp  AxelFLookAndFeel.h  ClipMatrixPanel.h  ConsoleBackPanel.h  DX7EGDisplay.h  DrumStepGrid.h  MixerEditor.h  MixerSidePanel.h  PatternBankBar.h  PatternStrip.h  PresetBrowser.h  RenderDialog.cpp  RenderDialog.h  SectionBox.h  TimelinePanel.h  TopBar.h  VoicePresetBar.h
